Use common codec's Base64 class